--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 *{
+    font-family: "Inter",sans-serif;
     padding: 0;
     margin: 0;
 }
@@ -78,10 +79,13 @@
 }
 
 .hero1{
-
-    padding: 90px 135px;
+display: flex;
+flex-direction: column;
+font-size: 30px;
+gap: 30px;
+    /* padding: 90px 135px;
     font-size: 30px;
-    text-align: center;
+    text-align: center; */
 
 }
 a{
@@ -96,6 +100,7 @@ font-size: 40px;
 padding: 12px 30px;
 border-radius: 12px;
 background-color: transparent;
+margin: 0 auto;
 
 }
 
@@ -114,9 +119,9 @@ background-color: transparent;
 }
 .p_content{
     
-    width: 90%;
-    padding: 30px;
-    margin:0 auto;
+    
+    padding: 20px 0px;
+    margin: auto;
     font-size: 20px;
 }
 
@@ -125,28 +130,28 @@ background-color: transparent;
 
 
 
-/* section  4 */
 
 @media (max-width:768px) {
+
+
+
+
+    /* Section2----Hero */
    
-    /* Section5 ----- Our services*/
-   .services_part1,
-    .services_part2{
-        width: 100% !important;
+    
+    .hero_heading{
+        padding: 30px;
+        font-size: 23px;
+    
     }
 
-    .services_heading {
-        font-size: 35px !important;
-        text-align: center;}
+    .hero_button {
+        font-size: 27px;
+        padding: 2px 20px;
+        border-radius: 12px;}
 
 
-        .section_li {
-            font-size: 17px !important;
-            padding: 4px;
-            width: 70% !important;
-            margin: 0 auto;
-            line-height: 1.3;
-        }
+
 
 /* Setion4 ----- Our Truth*/
 .truth-part1,
@@ -158,6 +163,30 @@ background-color: transparent;
 .truth_heading {
     font-size: 50px!important;
 }
+
+
+
+
+    /* Section5 ----- Our services*/
+    .services_part1,
+    .services_part2{
+        width: 100%!important ;
+    }
+
+    .services_heading {
+        font-size: 50px!important;
+    margin: auto;
+text-align: center;}
+
+
+        .section_li {
+            font-size: 17px !important;
+
+            line-height: 1.3;
+        }
+
+
+
 /* Section6---Why ChooseUS */
 
 .section6_heading{
@@ -168,27 +197,28 @@ background-color: transparent;
       font-size: 14px !important;
     width: 100% !important;}
 
-    .item2_head {
+.item2_head {
         font-size: 18px!important;}
 
-        .item2_paragraph {
+.item2_paragraph {
             font-size: 14px!important;}
 
-    .child {
+.child {
         width: 100% !important;
         padding: 10px;}
 
+.truth_image {
+            width: 100% !important;
+            margin: 0 auto;
+            height: 100%;
+        }
 
-    .hero1 {
-        padding: 8px 58px;
-        font-size: 30px;}
-
-    .hero_button {
-        font-size: 27px;
-        padding: 2px 20px;
-        border-radius: 12px;}
-
-
+.truth_li {
+           
+            font-size: 18px!important;
+            line-height: 1.20;
+           
+        }
 
 
 
@@ -255,6 +285,7 @@ background-color: transparent;
 
 .section10_div1_part1:nth-child(-n+3) {
     width: 100% !important; 
+    border: none !important;
     
     
 }
@@ -268,6 +299,11 @@ background-color: transparent;
 .part_section10_2 {
     border-top: 1px solid gray;
     flex-wrap: wrap;
+    
+    border-bottom: 1px solid gray;
+        
+       
+ 
 }
 
 }
@@ -741,7 +777,7 @@ Section10 */
 }
 
 .section10_div1_part1:nth-child(-n+3){
-    width: 24%;
+    width: 34%;
     border-right: 1px solid gray;
     
 }
