--- a/css/index.css
+++ b/css/index.css
@@ -3,13 +3,12 @@
     padding: 0;
     margin: 0;
 }
-
-.inter-<uniquifier> {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
+a:not([href]):not([class]), a:not([href]):not([class]):hover {
+    color: inherit;
+    text-decoration: none;
+    display: none;
 }
+
 .nav_ul{
     display: flex;
     gap: 30px;
@@ -20,6 +19,7 @@
 .nav_li{
     list-style: none;
     transition: color 2s;
+    font-family: "Inter", sans-serif;
    
 }
 
@@ -132,13 +132,24 @@ margin: 0 auto;
 
 
 @media (max-width:768px) {
-
-
-
-
-    /* Section2----Hero */
-   
     
+
+/* NAVBAR */
+.img_nav {
+    width: 45%;
+    object-fit: cover;
+}
+
+
+
+
+/* Section2----Hero */
+   
+.hero-section{
+
+    height: 60vh;
+}
+
     .hero_heading{
         padding: 30px;
         font-size: 23px;
@@ -158,10 +169,15 @@ margin: 0 auto;
 .truth-part2{
     width:100% !important;
     font-size: 58px;
+    padding: 5px;;
 }
 
 .truth_heading {
     font-size: 50px!important;
+    
+    padding-top: 16px !important;
+    padding-bottom: 8px !important;
+}
 }
 
 
@@ -171,17 +187,32 @@ margin: 0 auto;
     .services_part1,
     .services_part2{
         width: 100%!important ;
+        padding: 10px;
     }
 
     .services_heading {
         font-size: 50px!important;
-    margin: auto;
-text-align: center;}
+    margin: auto !important;
+    padding: 0;
+}
 
+
+.section6_para {
+    font-size: 14px !important;
+    width: 90% !important;
+}
+
+
+.section6_heading {
+    
+    padding: 14px 0px;
+    font-size: 65px;
+    font-weight: 400;
+    
+}
 
         .section_li {
             font-size: 17px !important;
-
             line-height: 1.3;
         }
 
@@ -189,12 +220,18 @@ text-align: center;}
 
 /* Section6---Why ChooseUS */
 
+.parent {
+    width:100% !important;
+}
+.section6{
+    padding: 3px !important;
+}
 .section6_heading{
-    font-size: 45px!important;
+    font-size: 39px!important;
 }
 
 .section6_para{  
-      font-size: 14px !important;
+      font-size: 15px !important;
     width: 100% !important;}
 
 .item2_head {
@@ -205,7 +242,7 @@ text-align: center;}
 
 .child {
         width: 100% !important;
-        padding: 10px;}
+        padding: 0px;}
 
 .truth_image {
             width: 100% !important;
@@ -222,37 +259,101 @@ text-align: center;}
 
 
 
-    /* Section8--------Animation */
+    /* Section7 --------Animation */
 
     .section7_part1 {
-        width: 105%!important;
-        font-size: 16px!important;}
+        width: 100%!important;
+        }
 
+
+        .heading_ani{
+            font-size: 15px;
+        }
         .section7_part2 {
             width: 100% !important;
             margin: auto !important;
-            font-size: 13px !important  ;}
+           }
+
+
+.section_ani_p{
+    font-size: 13px !important;
+}
+            .position_name1 i {
+                font-size: 16px;
+            }
+            .part1 p {
+                font-size: 14px;
+                margin: 0;
+            }
+            
+            .part2 p {
+                font-size: 14px;
+                margin: 0;
+            }
 
 
 
-    /* Section9------------About */
+                .main_7 div:nth-child(3) {
+                 
+                    width: 100%;
+                padding: 0;
+            }
+
+                        
+                
+            .position_name2 i {
+                font-size: 16px;
+            }
+
+
+
+
+
+
+
+
+    /* Section8------------About */
     .section8_heading {
         padding: 0px;
-        font-size: 18px !important;}
+        font-size: 28px !important;}
 
 
         .section8_para {
-            font-size: 13px !important;
+            font-size: 15px !important;
             font-family: "Inter", sans-serif;
             line-height: 1;}
 
-            .section8_part1 {
-                width: 100% !important;}
+.section8_main div,p{
+padding: 0;
+}
+
+
+
+
+
+.img_des p{
+font-size: 20px;
+
+}
+
+.img_section8{
+   
+    width: 80% !important;
+    margin-left: 30px;
+}
+
+
+
+
 .section8_part2_img_parent{
     flex-wrap:wrap !important;
 }
-.img{
+
+
+.img {
+
     width:100% !important;
+    align-items: center !important;
 }
 
 
@@ -260,11 +361,16 @@ text-align: center;}
 
 
 /* Section10 */
+.heading_section_nine{width: 100% !important;
+padding: 0;}
 
-.section9_heading {
-    font-family: "Inter", sans-serif;
-    font-size: 17px !important;
+
+
+
+.heading_section_nine h1 {
+    font-size: 27px;
     width: 100%;
+    margin: auto;
 }
 
 
@@ -273,7 +379,7 @@ text-align: center;}
 .section9_button {
     border-radius: 23px;
     font-size: 16px !important;
-    padding: 9px 21px;
+    padding: 0px;
     margin: 0;
 
 }
@@ -290,23 +396,46 @@ text-align: center;}
     
 }
 
-
-.part_section10_1 {
+.ol_1,.ol_2{
+    padding: 0;
+}
+.part_section_ten_one {
     flex-wrap: wrap;
+    font-size: 20px;
+    padding: 0;
+    width: 100% !important;
 }
 
 
 .part_section10_2 {
+    flex-direction: column;
     border-top: 1px solid gray;
-    flex-wrap: wrap;
-    
     border-bottom: 1px solid gray;
-        
-       
- 
-}
+    font-size: 20px;
+    flex-wrap: wrap;
+    padding: 0;
 
 }
+
+
+.section10_part3{
+    
+    font-size: 20px;
+
+}
+
+
+.section10_div1_part1 {
+    padding: 7px!important  ;
+}
+
+
+.section_img{
+    margin: 0px;
+}
+
+
+
 
 
 .truth_section{
@@ -572,7 +701,6 @@ margin: 15 auto;
 .section7_part1{
     width: 88%;
     margin: 15 auto;
-    
     font-size: 46px;
     font-family: "Inter", sans-serif;
     text-align: justify;
@@ -582,7 +710,6 @@ margin: 15 auto;
 
 
 .section7_part2{
-  
     width: 85%;
     margin: 15 auto;
     font-size: 30px;
@@ -596,7 +723,6 @@ margin: 15 auto;
 
 
 .section7_part3{
-
     width:89%;
    display: flex;
    justify-content: space-between;
@@ -730,7 +856,7 @@ Section9 */
     text-align: center;
 }
 
-.heading_section9{
+.heading_section_nine{
     width: 80%;
     margin: 0 auto;
     padding: 20px 0;
@@ -768,7 +894,7 @@ Section10 */
 }
 
 
-.part_section10_1{
+.part_section_ten_one{
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
